<resources>
    <string name="app_name">BMI</string>
    <string name="img_desc">Header Picture</string>
    <string name="tv_weight">Enter your weight</string>
    <string name="tv_height">Enter your height</string>
    <string name="weight_hint">Weight (Kg)</string>
    <string name="height_hint">Height (cm)</string>
    <string name="btn_text">Calculate</string>
    <string name="btn_reset">Reset</string>
    <string name="bmi">BMI</string>
    <string name="user">user name</string>
    <string name="pasword">password</string>
    <string name="login">login</string>
    <string name="ali">ali shefa</string>
</resources>