<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgh"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/img_desc"
        android:src="@drawable/bmi" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/tv_weight"
        android:textAllCaps="false"
        android:textColor="@color/white1"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/text_weight"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:hint="@string/weight_hint"
        android:inputType="number"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/tv_height"
        android:textColor="@color/white1"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/text_height"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:hint="@string/height_hint"
        android:inputType="number"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:textColor="@color/white1"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@color/banafsh"
        android:text="@string/btn_text"
        android:textAllCaps="false"
        android:textSize="25sp" />

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:textColor="@color/white1"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@color/banafsh"
        android:textStyle="bold"
        android:text="@string/btn_reset"
        android:textAllCaps="false"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/text_view"
        android:layout_width="375dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@color/white"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="25sp" />


</LinearLayout>



